crates/service/tests/hover/snapshots/features__hover__local_keyword.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(local $local i64)"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 16
    }
  }
}
