crates/service/tests/hover/snapshots/features__hover__loop_keyword.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(loop (result i32) (result f32))"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 5
    },
    "end": {
      "line": 3,
      "character": 9
    }
  }
}
