crates/service/tests/hover/snapshots/features__hover__memory_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(memory $x 0 1)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 10
    },
    "end": {
      "line": 2,
      "character": 12
    }
  }
}
