crates/service/tests/hover/snapshots/features__hover__memory_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(memory $x 0 1)\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 16
    },
    "end": {
      "line": 3,
      "character": 18
    }
  }
}
