crates/service/tests/hover/snapshots/features__hover__num_type.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\ni32\n```\n\nThe type `i32` classifies 32 bit integers."
  },
  "range": {
    "start": {
      "line": 2,
      "character": 17
    },
    "end": {
      "line": 2,
      "character": 20
    }
  }
}
