crates/service/tests/hover/snapshots/features__hover__param_decl.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(param $param i64)"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 17
    },
    "end": {
      "line": 2,
      "character": 23
    }
  }
}
