crates/service/tests/hover/snapshots/features__hover__param_ident_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(param $param i32)\n```"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 19
    },
    "end": {
      "line": 3,
      "character": 25
    }
  }
}
