crates/service/tests/hover/snapshots/features__hover__param_int_idx.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "language": "wat",
    "value": "(param i32)"
  },
  "range": {
    "start": {
      "line": 3,
      "character": 19
    },
    "end": {
      "line": 3,
      "character": 20
    }
  }
}
