crates/service/tests/hover/snapshots/features__hover__param_keyword.snap
---
source: crates/service/tests/hover/mod.rs
expression: response
---
{
  "contents": {
    "kind": "markdown",
    "value": "```wat\n(param $param i64)\n```"
  },
  "range": {
    "start": {
      "line": 2,
      "character": 11
    },
    "end": {
      "line": 2,
      "character": 16
    }
  }
}
